# space10

./: .gitignore  Cargo.toml  index.html
src/game/: character.rs  family.rs  lib.rs  resource_stockpile.rs  tile_kind.rs  zone.rs
src/game/camera/: mod.rs
src/game/default/: ownership.rs
src/game/faction/: mod.rs
src/game/game/: character.rs  mod.rs  region.rs  tile.rs  zone.rs
src/game/impl_traits/: partial_eq.rs
src/game/map/: coor.rs  dimension.rs  direction.rs  mod.rs  random.rs  static_helpers.rs  tile.rs  zone.rs
src/game/utils/: faction_name_generator.rs  js.rs  mod.rs  parse_id.rs
src/game/wasm/: allocate.rs  camera.rs  character.rs  color.rs  coor.rs  direction.rs  faction.rs  family.rs  government.rs  map_dimension.rs  metadata.rs  mod.rs  player.rs  setup_world.rs  tile.rs  zone.rs
src/web/: global.scss  index.scss  main.rs
src/web/component/: text_input.rs
src/web/context/: console.rs  controller_impl.rs  game.rs  mod.rs  world_map.rs  wrapped_sub_context.rs
src/web/enum_types/: map_id_indicator_kind.rs  mod.rs
src/web/parser/command/: command.pest  mod.rs
src/web/parser/experiment/: command.pest  debug.pest  test.txt
src/web/utils/: assign_if_ne.rs  html.rs  js.rs  mod.rs
src/web/view/: active_game_view.rs  game_layout.rs  mod.rs
src/web/view/console/: console.scss  input.rs  logs.rs  mod.rs
src/web/view/game_menu/: game_menu.rs  game_menu.scss  mod.rs  nav_item.rs  section.rs
src/web/view/map/: map.scss  mod.rs  render_map.rs
src/web/view/player/: create_player.rs  mod.rs  player.scss  show_player.rs
(+20 files in other folders)
