[package]
authors = ["Alfred Chan <alfred8844@gmail.com>"]
description = "A work-in-progress game."
edition = "2021"
name = "space10"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game/lib.rs"

[[bin]]
name = "main"
path = "src/web/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
getrandom = {version = "0.2.8", features = ["js"]}
js-sys = "0.3.61"
pest = "2.5.5"
pest_derive = "2.5.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0.152"
serde_json = "1.0.93"
stable-id = "0.4.1"
stable-id-traits = "0.2.0"
stylist = {version = "0.12.0", features = ["yew"]}
wasm-bindgen = "0.2.63"
web-sys = {version = "0.3.60", features = [
  "console",
  "CanvasRenderingContext2d",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "InputEvent",
]}
yew = {version = "0.20.0", features = ["csr"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true
lto = true
opt-level = 3
